--- a/main.css
+++ b/main.css
@@ -120,6 +120,29 @@ border-radius: 100px;
                 margin: 0px 60px 0px 0px;
             }
             }
+@media(max-width:343px){
+    .menu__logo{
+        position: relative;
+        top: -10px;
+        left: 130px;
+        width: 60px;
+        height:60px ;
+        background-color: white;
+        border-radius: 100px;
+        }
+        .text{
+            color: white;
+            font-size: 20px;
+        }
+        .menu__text a{
+            position: relative;
+            font-size: 20px;
+            left: 10%;
+            color: white;
+            text-decoration: none;
+            margin: 0px 60px 0px 0px;
+        }
+}
     
     
       
